5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1616_2947.log
== TEST (2019-04-01 15:24:18) 
-- CODE:
lb= float(input("lado b: "))
lc= float(input("lado c: "))
bc=float(int("angulo em graus: "))

from math import * 

a= a ** 2 = b ** 2 + c ** 2 - 2 * bc * cos

print(round(a , 2))
-- ERROR:
File "XXXX", line 7
    a= a ** 2 = b ** 2 + c ** 2 - 2 * bc * cos
      ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:36:42) 
-- CODE:
b= float(input("lado b: "))
c= float(input("lado c: "))
bc=float(int("angulo em graus: "))

from math import * 

 a ** 2 = b ** 2 + c ** 2 - 2 * bc * cos

print(round(bc , 2))
-- ERROR:
File "XXXX", line 7
    a ** 2 = b ** 2 + c ** 2 - 2 * bc * cos
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:39:26) 
-- CODE:
b= float(input("lado b: "))
c= float(input("lado c: "))
bc=float(int("angulo em graus: "))

from math import * 

 a ** 2 = b ** 2 + c ** 2 - 2 * b * c * cos

print(round( , 2))
-- ERROR:
File "XXXX", line 7
    a ** 2 = b ** 2 + c ** 2 - 2 * b * c * cos
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:39:34) 
-- CODE:
b= float(input("lado b: "))
c= float(input("lado c: "))
bc=float(int("angulo em graus: ")) 

 a ** 2 = b ** 2 + c ** 2 - 2 * b * c * cos

print(round( , 2))
-- ERROR:
File "XXXX", line 5
    a ** 2 = b ** 2 + c ** 2 - 2 * b * c * cos
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:49:52) 
-- CODE:
b= float(input("lado b: "))
c= float(input("lado c: "))
bc=float(int("angulo em graus: ")) 
from math import* 
 a ** 2 = b ** 2 + c ** 2 - 2 * b * c * cos

print(round(bc , 2))
-- ERROR:
File "XXXX", line 5
    a ** 2 = b ** 2 + c ** 2 - 2 * b * c * cos
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:50:24) 
-- CODE:
b= float(input("lado b: "))
c= float(input("lado c: "))
bc=float(int("angulo em graus: ")) 
from math import* 
 a ** 2 = b ** 2 + c ** 2 - 2 * b * c * cos

print(round(a, 2))
-- ERROR:
File "XXXX", line 5
    a ** 2 = b ** 2 + c ** 2 - 2 * b * c * cos
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
